--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     </head>
 
     <body>
-        <a href = https://flatironschool.com>Flatiron School</a>
+        <a href = https://flatironschool.com>Flatiron School</a> 
+       <p> <a href = https://dev.to/geraldarzy>Arzy</a> </p>
     </body>
 
 
